<resources>
    <string name="app_name">Tìm trọ</string>
    <string name="phien_ban">Phiên bản </string>
    <string name="facebook_app_id">434133683705239</string>
    <string name="fb_login_protocol_scheme">fb434133683705239</string>
    <string name="api_key">AIzaSyDnxmOszp_1nfrfhnUyNGQjC3aQNUptHyM</string>

    <string name="input_email_register">Nhập Email Đăng Ký</string>
    <string name="input_pass">Nhập Mật Khẩu</string>
    <string name="input_re_pass">Nhập Lại Mật Khẩu</string>
    <string name="note_register">Vui lòng đăng ký với email mà bạn sử dụng để xác nhận và tránh các sự cố về tài khoản!</string>
    <string name="backtologin">Quay Lại</string>
    <string name="register_account">Đăng Ký Tài Khoản</string>
    <string name="lostpass">Mất Mật Khẩu?</string>
    <string name="input_email">Nhập Email</string>
    <string name="login_title">Đăng Nhập</string>
    <string name="login_google">Đăng Nhập Google</string>
    <string name="login_facebook">Đăng Nhập Facebook</string>
    <string name="loign_ngay">Đăng nhập ngay</string>
    <string name="fblogin">Đăng Nhập FaceBook</string>
    <string name="register_new">Đăng Ký Mới</string>
    <string name="verifiation">Truy cập Email để xác thực tài khoản</string>
    <string name="open_gps">Bạn cần bật GPS để có thể sử dụng ứng dụng</string>
    <string name="open_internet">Hay bật kết nối internet để sử dụng ứng dụng.</string>
    <string name="email_error">Email không đúng định dạng!</string>
    <string name="email_null">Email không được để trống!</string>
    <string name="pass_erro">Mật khẩu quá ngắn!</string>
    <string name="pass_no_duplicate">Mật khẩu chưa giống nhau!</string>
    <string name="msg_login_success">Đăng nhập thành công!</string>
    <string name="khoi_phuc_mat_khau">Bạn vui lòng nhập địa chỉ Email vào khung bên dưới để tiến hành khôi phục mật khẩu.</string>
    <string name="khong_phai_thanh_vien">Bạn không phải là thành viên ?.</string>
    <string name="ton_tai">Đã tồn tại một tài khoản khác dùng email này.</string>
    <string name="khong_phai_so_dien_thoai">Số điện thoại không đúng định dạng.</string>
    <string name="chua_nhap_noi_dung_binh_luan">Bạn chưa nhập nội dung để bình luận.</string>
    <string name="danh_gia">Đánh giá</string>
    <string name="khong_pha_chu_comment">Bạn không phải là chủ comment này</string>
    <string name="xoa_comment">Bạn vừa xóa bình luận của mình.</string>
    <string name="xoa_hinh_anh">Bạn có chắc chắc xóa hình ảnh này.</string>
    <string name="tim_theo_khoang_cach">Tìm theo khoảng cách:</string>
    <string name="sua_thong_tin">Chỉnh sửa thông tin cá nhân.</string>
    <string name="nhap_khu_vuc">Cổ Nhuế, Từ Liêm...</string>
    <string name="chua_cap_quyen">Bạn cần cấp quyền để thực hiện chức năng này.</string>
    <string name="ban_co_muon_dang_xuat">Bạn có muốn đăng xuất tài khoản khỏi ứng dụng.</string>
    <string name="ban_co_muon_xoa_nha_tro">Bạn có muốn xóa nhà trọ này không.</string>
    <string name="ban_chua_dang_nhap">Bạn chưa đăng nhập.</string>
    <string name="sap_xep_theo">Sắp xếp tăng dần theo.</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>

    <string name="house">Nhà trọ</string>
    <string name="place">Vị trí</string>
    <string name="latest">Latest</string>
    <string name="recent_date">Theo ngày, tháng</string>
    <string name="category">Category</string>
    <string name="area">Area</string>
    <string name="price">Theo giá phòng</string>
    <string name="nearby">Nearby</string>
    <string name="top_member">Top member</string>
    <string name="reviews">Reviews</string>
    <string name="blog">Blogs</string>
    <string name="share_facebook">Chia sẻ facebook</string>
    <string name="facebook">Facebook</string>
    <string name="no_facebook">Máy của bạn chưa cài ứng dụng Facebook</string>
    <string name="twitter">Twitter</string>

    <string name="birthday">Chọn ngày sinh.</string>
    <string name="ok">Ok</string>
    <string name="clean">Clean</string>
    <string name="cancel">Cancel</string>


    <string name="content_search">Tìm kiếm thông tin nhà trọ theo bộ lọc dưới.</string>
    <string name="search_by_area">Theo khu vực</string>
    <string name="search_by_location">Theo vị trí hiện tại</string>
    <string name="trong_ban_kinh">Trong bán kính</string>
    <string name="loc_theo_gia">Lọc theo giá (đồng)</string>
    <string name="loc_theo_dien_tich">Lọc theo diện tích (mét vuông)</string>
    <string name="edt_min">Thấp nhất</string>
    <string name="txt_den">đến</string>
    <string name="edt_max">cao nhất</string>
    <string name="txt_thoi_gian">Thời gian</string>
    <string name="txt_khoan_cach">Khoảng cách</string>
    <string name="txt_gia_phong">Giá phòng</string>
    <string name="txt_ap_dung">Áp dụng</string>


    <string name="thong_tin_chi_tiet">Thông tin chi tiết</string>
    <string name="lien_he_ngay">Liên hệ ngay</string>
    <string name="dia_chi">Địa chỉ: </string>
    <string name="gia_phong">Giá phòng: </string>
    <string name="m2"> mét vuông </string>
    <string name="dong"> đồng</string>
    <string name="ngay">Ngày </string>
    <string name="thang">tháng </string>
    <string name="nam">năm </string>
    <string name="luc">lúc </string>
    <string name="con"> Còn</string>
    <string name="phong"> phòng</string>
    <string name="het_phong">Hết phòng</string>
    <string name="chi_tiet">Chi tiết: </string>
    <string name="chu_nha">Chủ nhà: </string>
    <string name="so_dien_thoai">Số điện thoại: </string>
    <string name="dien_tich">Diện tích: </string>
    <string name="location">Theo khoảng cách</string>
    <string name="km">km </string>

    <string name="home">Trang chủ </string>
    <string name="search">Tìm kiếm </string>
    <string name="add">Đăng tin </string>
    <string name="setting">Setting </string>
    <string name="profile">Cá nhân </string>
    <string name="gui">Gửi </string>
    <string name="read_more">Xem thêm </string>
    <string name="male">Nam</string>
    <string name="famale">Nữ</string>


    <!--Dang tin-->
    <string name="edt_landlord">Tên chủ nhà</string>
    <string name="edt_address">Địa chỉ</string>
    <string name="edt_price">Giá phòng</string>
    <string name="edt_quantity">Số lượng phòng</string>
    <string name="edt_acreage">Diện tích (mét vuông)</string>
    <string name="edt_tel">Số điện thoại</string>
    <string name="edt_contents">Mô tả chi tiết</string>


    <string name="edt_utility">Tiện ích</string>
    <string name="no_utility">Không có tiện ích</string>
    <string name="may_lanh">Máy lạnh</string>
    <string name="wifi">Wifi</string>
    <string name="giuong">Giường</string>
    <string name="ban_ghe">Bàn, ghế</string>
    <string name="tu_quan_ao">Tủ quần áo</string>
    <string name="nong_lanh">Nóng lạnh</string>
    <string name="gui_xe">Gửi xe miễn phí</string>
    <string name="register_house">Đăng tin</string>
    <string name="update_house">Cập nhật</string>
    <string name="note">Lưu ý: Tin có ảnh không liên quan đến nhà trọ sẽ bị xóa mà không có thông báo trước.</string>
    <string name="note2">Bạn chưa đăng nhập vào ứng dụng nên không thể thực hiện chức năng này.</string>


    <string name="chon_anh">Chọn ảnh</string>
    <string name="chup_anh_moi">Chụp ảnh mới</string>
    <string name="chon_album">Chọn từ album</string>


    <string name="MaTienIch1">MaTienIch1</string>
    <string name="MaTienIch2">MaTienIch2</string>
    <string name="MaTienIch3">MaTienIch3</string>
    <string name="MaTienIch4">MaTienIch4</string>
    <string name="MaTienIch5">MaTienIch5</string>
    <string name="MaTienIch6">MaTienIch6</string>


</resources>
