<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    android:orientation="vertical">

    <RadioGroup
        android:id="@+id/group_tab_radio"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40dp"
        android:background="@color/white"
        android:gravity="center"
        android:orientation="horizontal">

        <RadioButton
            android:id="@+id/rd_latest"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/change_background_tab"
            android:button="@android:color/transparent"
            android:checked="true"
            android:drawableBottom="@drawable/ic_keyboard_arrow_down_black_24dp"
            android:text="@string/latest"
            android:textAlignment="center"
            android:textColor="@drawable/change_text_tab" />

        <View
            android:layout_width="@dimen/_1dp"
            android:layout_height="match_parent"
            android:background="@color/background" />

        <RadioButton
            android:id="@+id/rd_category"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/change_background_tab"
            android:button="@android:color/transparent"
            android:drawableBottom="@drawable/ic_keyboard_arrow_down_black_24dp"
            android:text="@string/category"
            android:textAlignment="center"
            android:textColor="@drawable/change_text_tab" />

        <View
            android:layout_width="@dimen/_1dp"
            android:layout_height="match_parent"
            android:background="@color/background" />

        <RadioButton
            android:id="@+id/rd_area"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@drawable/change_background_tab"
            android:button="@android:color/transparent"
            android:drawableBottom="@drawable/ic_keyboard_arrow_down_black_24dp"
            android:text="@string/area"
            android:textAlignment="center"
            android:textColor="@drawable/change_text_tab" />
    </RadioGroup>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:drawableLeft="@drawable/nearby"
                    android:drawablePadding="@dimen/_10dp"
                    android:gravity="left|center"
                    android:padding="@dimen/_10dp"
                    android:text="@string/nearby"
                    android:textAllCaps="false" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:drawableLeft="@drawable/blog"
                    android:drawablePadding="@dimen/_10dp"
                    android:gravity="left|center"
                    android:padding="@dimen/_10dp"
                    android:text="@string/blog"
                    android:textAllCaps="false" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:drawableLeft="@drawable/review"
                    android:drawablePadding="@dimen/_10dp"
                    android:gravity="left|center"
                    android:padding="@dimen/_10dp"
                    android:text="@string/reviews"
                    android:textAllCaps="false" />

                <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="@dimen/_5dp"
                    android:layout_weight="1"
                    android:background="@color/white"
                    android:drawableLeft="@drawable/user"
                    android:drawablePadding="@dimen/_10dp"
                    android:gravity="left|center"
                    android:padding="@dimen/_10dp"
                    android:text="@string/top_member"
                    android:textAllCaps="false" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>
</LinearLayout>